src/objects/Speciality_MERC__c.object
<CustomObject>
    <description>Contains Health Care Provider speciality information 
Created by John A Adams 12/15/2013</description>
    <fields>
        <fullName>Account_GLBL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account
Created by John A Adams 12/15/2013</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Specialities</relationshipLabel>
        <relationshipName>Specialities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CST_App_Menu_Flag_CUST__c</fullName>
        <description>Flag for the gathering of distinct values in the identified fields. Entries must match the API name of a field on this object. See the object CST App Menu Pool for more info.</description>
        <inlineHelpText>Flag for the gathering of distinct values in the identified fields. Entries must match the API name of a field on this object. See the object CST App Menu Pool for more info.</inlineHelpText>
        <label>CST App Menu Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Priority_Rank_Nbr_GLBL__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spclty_Desc_Cd_GLBL__c</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Del_Date_GLBL__c</fullName>
        <description>Del Date
Created by John A Adams 12/15/2013</description>
        <label>Del Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Del_Flg_GLBL__c</fullName>
        <description>Del Flag
Created by John A Adams 12/15/2013</description>
        <label>Del Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edctnl_Spclty_Flg_GLBL__c</fullName>
        <description>Educational Specialty Flag
Created by John A Adams 12/15/2013</description>
        <label>Educational Specialty Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efctv_End_Dt_GLBL__c</fullName>
        <description>End Date
Created by John A Adams 12/15/2013</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Efctv_Start_Dt_GLBL__c</fullName>
        <description>Effective Date
Created by John A Adams 12/15/2013</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Populated via Workflow, used for Integration with External systems.
Created by John A Adams 1/10/2014</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Tmstmp_GLBL__c</fullName>
        <description>Source Load Timestamp
Created by John A Adams 12/15/2013</description>
        <label>Source Load Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Usr_GLBL__c</fullName>
        <description>ODS Load User
Created by John A Adams 12/15/2013</description>
        <label>ODS Load User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Tmstmp_GLBL__c</fullName>
        <description>Source Update Timestamp
Created by John A Adams 12/15/2013</description>
        <label>Source Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Usr_GLBL__c</fullName>
        <description>ODS Last Update User
Created by John A Adams 12/15/2013</description>
        <label>ODS Last Update User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Cntry_Cd_GLBL__c</fullName>
        <description>Party Country Code
Created by John A Adams 12/15/2013</description>
        <label>Party Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Rcrd_Typ_Cd_GLBL__c</fullName>
        <description>Party Record Type Code
Created by John A Adams 12/15/2013</description>
        <label>Party Record Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prfsnl_Spclty_Flg_GLBL__c</fullName>
        <description>Professional Specialty Flag
Created by John A Adams 12/15/2013</description>
        <label>Professional Specialty Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Rank_Nbr_GLBL__c</fullName>
        <description>Priority Rank Number
Created by John A Adams 12/15/2013</description>
        <label>Priority Rank Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spclty_Cd_GLBL__c</fullName>
        <description>Specialty Code
Created by John A Adams 12/15/2013</description>
        <label>Speciality Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spclty_Desc_Cd_GLBL__c</fullName>
        <description>Specialty Description
Created by John A Adams 12/15/2013</description>
        <label>Speciality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spclty_Typ_Cd_GLBL__c</fullName>
        <description>Specialty Type Code
Created by John A Adams 12/15/2013</description>
        <label>Speciality Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speciality_External_ID_GLBL__c</fullName>
        <description>Oliver Dunford 6th Jan, Mastered ODS Ext Id</description>
        <externalId>true</externalId>
        <label>Speciality External ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Block_Flg_GLBL__c</fullName>
        <description>Source Block Flag
Created by John A Adams 12/15/2013</description>
        <label>Source Block Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Sys_Cd_GLBL__c</fullName>
        <description>Source System Code
Created by John A Adams 12/15/2013</description>
        <label>Source System Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Speciality</label>
    <nameField>
        <label>Speciality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>